--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -1,5 +1,5 @@
 header{
-    width: 100vw;
+    width: 100%;
     height: 7rem;
     display: flex;
     align-items: center;
@@ -33,7 +33,7 @@ header{
     }
   }
   
-  section{
+  .section--home{
     height: 90vh;
     width: 100vw;
     display: flex;
@@ -57,21 +57,21 @@ header{
     }
   }
   footer{
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     p{
-      margin-left: 1.15rem;
+      margin-left: 12rem;
       font-size: 1.4rem;
     }
     div{
-      margin-left: 60vmax;
       display: flex;
       align-items: flex-end;
+      margin-right: 5rem;
       a{
-        margin: 0 1rem 0 1rem;
+        margin: 0 2rem 0 2rem;
         img:hover{
           transform: scale(1.2);
         }
@@ -89,4 +89,4 @@ header{
       border-color: transparent;
     }
   }
-  
+
