--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,11 @@
 $font-primary: 'Roboto', sans-serif;
+$font-secondary: 'Quicksand', sans-serif;
 
 $color-primary: #F0F0F0;
 $color-secondary: #9C2D41;
 $color-terciary: #ABABAB;
+
+
+$font-light: 300;
+$font-regular: 400;
+$font-bold: 600;
