--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,7 @@
 
 @import 'home';
 @import 'about';
+@import 'contact';
 @import 'works';
 
 
@@ -14,3 +15,4 @@
 
 
 // transition: all .6s cubic-bezier(.645, .045, .355, 1);
+//#6C63FF
