--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,8 +3,9 @@
 
 @import 'variables';
 
-@import 'default';
+@import 'mixins';
 
+@import 'default';
 @import 'home';
 @import 'about';
 @import 'contact';
